--- a/ak-randomizer/index.html
+++ b/ak-randomizer/index.html
@@ -23,6 +23,7 @@
     <base href="/ak-randomizer">
 </head>
 <body ng-app="app" ng-controller="MyController as vm" id="">
+    <div>The site is currently broken due to resource format changes :(</div>
     <div ng-if="vm.isLoading">Loading</div>
     <div ng-if="!vm.isLoading">
         <div class="flexh">
