--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-animate/1.8.3/angular-animate.min.js" integrity="sha512-Vhup4/4s+jnmiFsp1Sg1/6jXncRbIBc+fKemYjq1n+nEXthmeASyaWnClWsAV5Sas7WbLMLNYYHw6TxwQE4oPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-touch/1.7.8/angular-touch.min.js" integrity="sha512-mUwY1j7oX/p8Tj8XuWKsXojSpjMV1DjkQQXNzDCUK2IsSwV/8JR+KOgxxY6EXPkgLN29gNPEuckLBz0J9EDUnQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="moment.min.js"></script>
+    <script src="moment-duration-format.js"></script>
     <script src="ui-bootstrap-tpls-2.5.0.min.js"></script>
     <script src="jquery.min.js"></script>
     <script src="lodash.js"></script>
@@ -37,18 +39,19 @@
                 <div ng-if="vm.skin">
                     <div class="skin-container">
                         <img ng-show="vm.showSkin" ng-src="{{vm.skin.url}}" ng-on-load="vm.testOnLoad($event)" class="skin-image" ng-style="vm.viewPortInfo.style">
+                        <img ng-show="!vm.showSkin" ng-src="https://stripedypaper.github.io/ak-guesser/loading.png">
                     </div>
                 </div>
                 <div class="flex1 flexv">
                     <div ng-show="vm.skin" class="block show-mobile">
-                        <input type="text" ng-model="vm.skinInput" placeholder="Guess the operator & skin" uib-typeahead="skin.searchableName for skin in vm.skins | filter:vm.typeAheadFilter($viewValue) | orderBy:vm.typeAheadOrderBy($viewValue) | limitTo:8" typeahead-on-select="vm.selectSkin($item)" class="form-control">
+                        <input type="text" ng-disabled="vm.timeLeftSeconds < 0" ng-model="vm.skinInput" placeholder="Guess the operator & skin" uib-typeahead="skin.searchableName for skin in vm.skins | filter:vm.typeAheadFilter($viewValue) | orderBy:vm.typeAheadOrderBy($viewValue) | limitTo:8" typeahead-on-select="vm.selectSkin($item)" class="form-control">
                     </div>
                     <div class="flexh">
                         <div ng-if="vm.skin" class="form-group flex1 hide-mobile">
-                            <input type="text" ng-model="vm.skinInput" placeholder="Guess the operator & skin" uib-typeahead="skin.searchableName for skin in vm.skins | filter:vm.typeAheadFilter($viewValue) | orderBy:vm.typeAheadOrderBy($viewValue) | limitTo:8" typeahead-on-select="vm.selectSkin($item)" class="form-control">
+                            <input type="text" ng-disabled="vm.timeLeftSeconds < 0" ng-model="vm.skinInput" placeholder="Guess the operator & skin" uib-typeahead="skin.searchableName for skin in vm.skins | filter:vm.typeAheadFilter($viewValue) | orderBy:vm.typeAheadOrderBy($viewValue) | limitTo:8" typeahead-on-select="vm.selectSkin($item)" class="form-control">
                         </div>
                         <button type="button" class="btn btn-secondary" ng-click="vm.showMore()" ng-if="vm.skin" ng-disabled="vm.viewPortInfo.zoomStep == 4">Show more</button>
-                        <button type="button" class="btn btn-primary" ng-click="vm.test(true)">{{vm.skin ? 'Skip' : 'Start'}}</button>
+                        <button type="button" class="btn btn-primary" ng-click="vm.test(true)">{{vm.getNextImageText()}}</button>
                     </div>
                     <div class="flex1"></div>
                     <div>
@@ -58,8 +61,14 @@
                                 <div>{{vm.previousSkin.searchableName}}</div>
                                 <div>{{vm.previousScore}}</div>
                             </div>
-                            <div class="skin-container-small">
-                                <img ng-src="{{vm.previousSkin.url}}" class="skin-image-small">
+                            <div class="flexh">
+                                <div class="flex1"></div>
+                                <div class="skin-container-small" ng-if="vm.previousViewPortInfo">
+                                    <img ng-src="{{vm.previousSkin.url}}" class="skin-image" ng-style="vm.previousViewPortInfo.style">
+                                </div>
+                                <div class="skin-container-small">
+                                    <img ng-src="{{vm.previousSkin.url}}" class="skin-image-small">
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -67,9 +76,9 @@
             </div>
             <div ng-if="vm.skin">
                 <div class="block">
-                    <div>Score increase if guessed: {{vm.scoreIfGuessed}}</div>
+                    <div ng-hide="vm.timeLeftSeconds < 0">Score increase if guessed: {{vm.scoreIfGuessed}}</div>
                     <div>Current score: {{vm.score}}</div>
-                    <div>Time remaining: {{vm.timeLeftSeconds}}</div>
+                    <div>Time remaining: {{vm.getTimeText()}}</div>
                 </div>
             </div>
 
