--- a/ak-guesser/enemy/index.html
+++ b/ak-guesser/enemy/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Arknights Guesser</title>
+    <title>Arknights Enemy Guesser</title>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-NFH81TE3QE"></script>
     <script>
@@ -18,22 +18,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-animate/1.8.3/angular-animate.min.js" integrity="sha512-Vhup4/4s+jnmiFsp1Sg1/6jXncRbIBc+fKemYjq1n+nEXthmeASyaWnClWsAV5Sas7WbLMLNYYHw6TxwQE4oPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-touch/1.7.8/angular-touch.min.js" integrity="sha512-mUwY1j7oX/p8Tj8XuWKsXojSpjMV1DjkQQXNzDCUK2IsSwV/8JR+KOgxxY6EXPkgLN29gNPEuckLBz0J9EDUnQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="moment.min.js"></script>
-    <script src="moment-duration-format.js"></script>
-    <script src="ui-bootstrap-tpls-2.5.0.min.js"></script>
-    <script src="jquery.min.js"></script>
-    <script src="lodash.js"></script>
+    <script src="../moment.min.js"></script>
+    <script src="../moment-duration-format.js"></script>
+    <script src="../ui-bootstrap-tpls-2.5.0.min.js"></script>
+    <script src="../jquery.min.js"></script>
+    <script src="../lodash.js"></script>
     <script src="main.js"></script>
-    <link href="styles.css" rel="stylesheet"></link>
+    <link href="../styles.css" rel="stylesheet"></link>
     <base href="/ak-guesser">
-    <meta name="description" content="Try guessing the Arknights operator & skin from a zoomed in image.">
+    <meta name="description" content="Try guessing the Arknights enemy's name from an image.">
 </head>
 <body ng-app="app" ng-controller="MyController as vm" id="">
     <div class="flexv maxh">
         <div ng-if="vm.isLoading">Loading resources...</div>
         <div ng-if="!vm.isLoading" class="main">
             <div class="flexh">
-                <h1 class="display-4 block">Arknights Guesser (beta)</h1>
+                <h1 class="display-4 block">Arknights Enemy Guesser (beta)</h1>
                 <div class="flex1"></div>
                 <div class="block flexv">
                     <select class="form-select mauto" ng-change="vm.selectlanguage()" ng-model="vm.lang">
