--- a/ak-guesser/enemy/index.html
+++ b/ak-guesser/enemy/index.html
@@ -26,9 +26,10 @@
     <script src="main.js"></script>
     <link href="../styles.css" rel="stylesheet"></link>
     <base href="/ak-guesser">
-    <meta name="description" content="Try guessing the Arknights enemy's name from an image.">
+    <!-- <meta name="description" content="Try guessing the Arknights enemy's name from an image."> -->
 </head>
 <body ng-app="app" ng-controller="MyController as vm" id="">
+    <div>under construction</div>
     <div class="flexv maxh">
         <div ng-if="vm.isLoading">Loading resources...</div>
         <div ng-if="!vm.isLoading" class="main">
