--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -14,8 +14,10 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-route.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-animate/1.8.3/angular-animate.min.js" integrity="sha512-Vhup4/4s+jnmiFsp1Sg1/6jXncRbIBc+fKemYjq1n+nEXthmeASyaWnClWsAV5Sas7WbLMLNYYHw6TxwQE4oPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-touch/1.7.8/angular-touch.min.js" integrity="sha512-mUwY1j7oX/p8Tj8XuWKsXojSpjMV1DjkQQXNzDCUK2IsSwV/8JR+KOgxxY6EXPkgLN29gNPEuckLBz0J9EDUnQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="moment.min.js"></script>
@@ -28,14 +30,18 @@
     <base href="/ak-guesser">
     <meta name="description" content="Try guessing the Arknights operator & skin from a zoomed in image.">
 </head>
-<body ng-app="app" ng-controller="MyController as vm" id="">
+<body ng-app="app" ng-controller="MyController as vm" id="" data-bs-theme="light">
     <div class="flexv maxh">
         <div ng-if="vm.isLoading">Loading resources...</div>
         <div ng-if="!vm.isLoading" class="main">
             <div class="flexh">
                 <h1 class="display-4 block">Arknights Guesser (beta)</h1>
                 <div class="flex1"></div>
-                <div class="block flexv">
+                <div class="form-check form-switch mauto" style="margin-right: 16px">
+                    <input class="form-check-input" type="checkbox" ng-click="vm.toggleDarkMode()" ng-checked="vm.options.darkMode">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Dark mode</label>
+                </div>
+                <div class="flexv">
                     <select class="form-select mauto" ng-change="vm.selectlanguage()" ng-model="vm.lang">
                         <option value="en_US">English</option>
                         <option value="ja_JP">日本語</option>
