--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -126,7 +126,12 @@
                 </div>
             </div>
         </div>
-        <div class="small">Tweet suggestions, bugs, or comments to <a target="blank" href="https://twitter.com/boardwalkhotel_">@boardwalkhotel_</a></div>
+        <div class="flexh">
+            <div class="small flex1" style="margin-top:auto">Tweet suggestions, bugs, or comments to <a target="blank" href="https://twitter.com/boardwalkhotel_">@boardwalkhotel_</a></div>
+            <a href="enemy/" target="_self">
+                <img src="https://stripedypaper.github.io/ak-guesser/image/sticker1.png" style="height:64px">
+            </a>
+        </div>
     </div>
 </div>
 </body>
