--- a/ak-guesser/enemy/index.html
+++ b/ak-guesser/enemy/index.html
@@ -14,8 +14,10 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.8/angular-route.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script>
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js" integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/" crossorigin="anonymous"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-animate/1.8.3/angular-animate.min.js" integrity="sha512-Vhup4/4s+jnmiFsp1Sg1/6jXncRbIBc+fKemYjq1n+nEXthmeASyaWnClWsAV5Sas7WbLMLNYYHw6TxwQE4oPQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-touch/1.7.8/angular-touch.min.js" integrity="sha512-mUwY1j7oX/p8Tj8XuWKsXojSpjMV1DjkQQXNzDCUK2IsSwV/8JR+KOgxxY6EXPkgLN29gNPEuckLBz0J9EDUnQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../moment.min.js"></script>
@@ -26,17 +28,21 @@
     <script src="main.js"></script>
     <link href="../styles.css" rel="stylesheet"></link>
     <base href="/ak-guesser">
-    <!-- <meta name="description" content="Try guessing the Arknights enemy's name from an image."> -->
+    <meta name="description" content="Try guessing the Arknights enemy's name from an image.">
+    <link rel="shortcut icon" href="https://stripedypaper.github.io/ak-guesser/favicon.ico" />
 </head>
-<body ng-app="app" ng-controller="MyController as vm" id="">
-    <div>under construction</div>
+<body ng-app="app" ng-controller="MyController as vm" id="" data-bs-theme="light">
     <div class="flexv maxh">
         <div ng-if="vm.isLoading">Loading resources...</div>
         <div ng-if="!vm.isLoading" class="main">
             <div class="flexh">
                 <h1 class="display-4 block">Arknights Enemy Guesser (beta)</h1>
                 <div class="flex1"></div>
-                <div class="block flexv">
+                <div class="form-check form-switch mauto" style="margin-right: 16px">
+                    <input class="form-check-input" type="checkbox" ng-click="vm.toggleDarkMode()" ng-checked="vm.options.darkMode">
+                    <label class="form-check-label" for="flexSwitchCheckDefault">Dark mode</label>
+                </div>
+                <div class="flexv">
                     <select class="form-select mauto" ng-change="vm.selectlanguage()" ng-model="vm.lang">
                         <option value="en_US">English</option>
                         <option value="ja_JP">日本語</option>
@@ -46,56 +52,50 @@
             </div>
 
             <div class="flexh block">
-                <div ng-if="vm.skin">
-                    <div class="skin-container">
-                        <img draggable="false" ng-show="vm.showSkin" ng-src="{{vm.skin.url}}" ng-on-load="vm.testOnLoad($event)" class="skin-image" ng-style="vm.viewPortInfo.style">
+                <div ng-if="vm.questionIndex >= 0">
+                    <div class="skin-container flexv">
+                        <img draggable="false" ng-show="vm.showSkin && vm.questionIndex < vm.questions" ng-src="{{vm.enemies[vm.questionIndex + vm.errorOffset].url}}" ng-on-load="vm.testOnLoad($event)" ng-on-error="vm.onError($event)" class="enemy-image">
                         <img ng-show="!vm.showSkin" ng-src="https://stripedypaper.github.io/ak-guesser/loading.png">
                     </div>
                 </div>
                 <div class="flex1 flexv">
-                    <div ng-show="vm.skin" class="block show-mobile">
-                        <input type="text" ng-disabled="vm.timeLeftSeconds < 0" ng-model="vm.skinInput" placeholder="Guess the operator & skin" uib-typeahead="skin.searchableName for skin in vm.skins | filter:vm.typeAheadFilter($viewValue) | orderBy:vm.typeAheadOrderBy($viewValue) | limitTo:8" typeahead-on-select="vm.selectSkin($item)" class="form-control">
-                    </div>
                     <div class="flexh">
-                        <div ng-if="vm.skin" class="form-group flex1 hide-mobile">
-                            <input type="text" ng-disabled="vm.timeLeftSeconds < 0" ng-model="vm.skinInput" placeholder="Guess the operator & skin" uib-typeahead="skin.searchableName for skin in vm.skins | filter:vm.typeAheadFilter($viewValue) | orderBy:vm.typeAheadOrderBy($viewValue) | limitTo:8" typeahead-on-select="vm.selectSkin($item)" class="form-control">
+                        <div ng-if="vm.questionIndex >= 0" class="form-group flex1">
+                            <input type="text" ng-model="vm.skinInput"  ng-disabled="vm.questionIndex >= vm.questions" placeholder="Guess the enemy" uib-typeahead="enemy.searchableName for enemy in vm.enemies | filter:vm.typeAheadFilter($viewValue) | orderBy:vm.typeAheadOrderBy($viewValue) | limitTo:10" typeahead-on-select="vm.selectSkin($item)" class="form-control">
                         </div>
-                        <button type="button" class="btn btn-secondary" ng-click="vm.showMore()" ng-if="vm.skin" ng-disabled="vm.viewPortInfo.zoomStep == 4">Show more</button>
+                        <!-- <button type="button" class="btn btn-secondary" ng-click="vm.showMore()" ng-if="vm.skin" ng-disabled="vm.viewPortInfo.zoomStep == 4">Show more</button> -->
                         <button type="button" class="btn btn-primary" ng-click="vm.test(true)">{{vm.getNextImageText()}}</button>
                     </div>
                     <div class="flex1"></div>
                     <div>
-                        <div ng-if="vm.previousSkin">
+                        <div ng-if="vm.previousEnemy">
                             <div class="block align-right">
                                 <div>Previous image</div>
-                                <div>{{vm.previousSkin.searchableName}}</div>
+                                <div>{{vm.previousEnemy.searchableName}}</div>
                                 <div>{{vm.previousScore}}</div>
                             </div>
                             <div class="flexh">
                                 <div class="flex1"></div>
-                                <div class="skin-container-small" ng-if="vm.previousViewPortInfo">
-                                    <img ng-src="{{vm.previousSkin.url}}" class="skin-image" ng-style="vm.previousViewPortInfo.style">
-                                </div>
                                 <div class="skin-container-small">
-                                    <img ng-src="{{vm.previousSkin.url}}" class="skin-image-small">
+                                    <img ng-src="{{vm.previousEnemy.url}}" class="skin-image-small">
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div ng-if="vm.skin">
+            <div ng-if="vm.questionIndex >= 0">
                 <div class="block">
-                    <div ng-hide="vm.timeLeftSeconds < 0">Score increase if guessed: {{vm.scoreIfGuessed}}</div>
+                    <div ng-hide="vm.questionIndex >= vm.questions">Score increase if guessed: {{vm.scoreIfGuessed}}</div>
                     <div>Current score: {{vm.score}}</div>
-                    <div ng-hide="vm.options.endless">Time remaining: {{vm.getTimeText()}}</div>
+                    <div ng-hide="vm.options.endless">Questions remaining: {{vm.questions - vm.questionIndex}}</div>
                 </div>
             </div>
 
 
             <!--<div ng-repeat="(key, val) in vm.stats">{{key}} {{val}}</div>-->
             <!-- Button trigger modal -->
-            <button type="button" ng-show="vm.timeLeftSeconds < 0" class="btn btn-secondary mb" data-bs-toggle="modal" data-bs-target="#advanced">Options</button>
+            <!-- <button type="button" ng-show="vm.timeLeftSeconds < 0" class="btn btn-secondary mb" data-bs-toggle="modal" data-bs-target="#advanced">Options</button> -->
 
             <!-- Modal -->
             <div class="modal fade" id="advanced" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -120,7 +120,12 @@
                 </div>
             </div>
         </div>
-        <div class="small">Tweet suggestions, bugs, or comments to <a target="blank" href="https://twitter.com/boardwalkhotel_">@boardwalkhotel_</a></div>
+        <div class="flexh">
+            <div class="small flex1" style="margin-top:auto">Tweet suggestions, bugs, or comments to <a target="blank" href="https://twitter.com/boardwalkhotel_">@boardwalkhotel_</a></div>
+            <a href="../" target="_self">
+                <img src="https://stripedypaper.github.io/ak-guesser/image/sticker2.png" style="height:64px">
+            </a>
+        </div>
     </div>
 </div>
 </body>
