--- a/ak-guesser/enemy/index.html
+++ b/ak-guesser/enemy/index.html
@@ -122,7 +122,7 @@
         </div>
         <div class="flexh">
             <div class="small flex1" style="margin-top:auto">Tweet suggestions, bugs, or comments to <a target="blank" href="https://twitter.com/boardwalkhotel_">@boardwalkhotel_</a></div>
-            <a href="../" target="_self">
+            <a href="ak-guesser/" target="_self">
                 <img src="https://stripedypaper.github.io/ak-guesser/image/sticker2.png" style="height:64px">
             </a>
         </div>
