--- a/ak-guesser/enemy/index.html
+++ b/ak-guesser/enemy/index.html
@@ -121,7 +121,10 @@
             </div>
         </div>
         <div class="flexh">
-            <div class="small flex1" style="margin-top:auto">Tweet suggestions, bugs, or comments to <a target="blank" href="https://twitter.com/boardwalkhotel_">@boardwalkhotel_</a></div>
+            <div class="flex1" style="margin-top:auto">
+                <div class="small">Thanks to Aceship and Kengxxiao for game resources</a></div>
+                <div class="small">Created by <a target="blank" href="https://twitter.com/boardwalkhotel_">@boardwalkhotel_</a></div>
+            </div>
             <a href="ak-guesser/" target="_self">
                 <img src="https://stripedypaper.github.io/ak-guesser/image/sticker2.png" style="height:64px">
             </a>
