--- a/ak-guesser/enemy/index.html
+++ b/ak-guesser/enemy/index.html
@@ -129,6 +129,12 @@
             <a href="ak-guesser/" target="_self">
                 <img src="https://stripedypaper.github.io/ak-guesser/image/sticker2.png" style="height:64px">
             </a>
+            <!-- <a href="ak-guesser/enemy" target="_self">
+                <img src="https://stripedypaper.github.io/ak-guesser/image/sticker1.png" style="height:64px">
+            </a> -->
+            <a href="ak-guesser/skill" target="_self">
+                <img src="ak-guesser/image/sticker4.png" style="height:64px">
+            </a>
         </div>
     </div>
 </div>
