--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<p>stripedypaper's projects<br>
 		<br>
 		<a href="/cube/">Maplestory Cube Sim</a></p>
+		<a href="/ak-guesser/">Arknights Guesser</a></p>
 </body>
 </html>
