change option text

--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -124,7 +124,7 @@
 
                             <div class="form-check form-switch">
                                 <input class="form-check-input" type="checkbox" ng-model="vm.options.enableBadZoomCheck" ng-checked="vm.options.enableBadZoomCheck">
-                                <label class="form-check-label" for="flexSwitchCheckDefault">Enable retry on bad zoom (experimental)</label>
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Enable retry when zoomed in on blank area (experimental)</label>
                             </div>
                         </div>
                     </div>
