--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -113,13 +113,23 @@
                         </div>
                         <div class="modal-body">
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" ng-model="vm.options.endless" ng-checked="vm.options.endless">
-                                <label class="form-check-label" for="flexSwitchCheckDefault">Endless mode</label>
+                                <input class="form-check-input" type="checkbox" ng-model="vm.options.enableE0" ng-checked="vm.options.enableE0" ng-click="vm.toggleArt(0)">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Enable operator E0 art</label>
                             </div>
 
                             <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" ng-model="vm.options.enableE0" ng-checked="vm.options.enableE0">
-                                <label class="form-check-label" for="flexSwitchCheckDefault">Enable operator E0 art</label>
+                                <input class="form-check-input" type="checkbox" ng-model="vm.options.enableE2" ng-checked="vm.options.enableE2" ng-click="vm.toggleArt(1)">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Enable operator E2 art</label>
+                            </div>
+
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" ng-model="vm.options.enableSkin" ng-checked="vm.options.enableSkin" ng-click="vm.toggleArt(2)">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Enable operator skin art</label>
+                            </div>
+
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" ng-model="vm.options.endless" ng-checked="vm.options.endless">
+                                <label class="form-check-label" for="flexSwitchCheckDefault">Endless mode</label>
                             </div>
 
                             <div class="form-check form-switch">
