--- a/ak-guesser/enemy/index.html
+++ b/ak-guesser/enemy/index.html
@@ -53,9 +53,9 @@
 
             <div class="flexh block">
                 <div ng-if="vm.questionIndex >= 0">
-                    <div class="skin-container flexv">
-                        <img draggable="false" ng-show="vm.showSkin && vm.questionIndex < vm.questions" ng-src="{{vm.enemies[vm.questionIndex + vm.errorOffset].url}}" ng-on-load="vm.testOnLoad($event)" ng-on-error="vm.onError($event)" class="enemy-image">
-                        <img ng-show="!vm.showSkin" ng-src="https://stripedypaper.github.io/ak-guesser/loading.png">
+                    <div class="skin-container flexv" ng-style="vm.bigImageContainerStyle">
+                        <img draggable="false" ng-show="vm.showSkin && vm.questionIndex < vm.questions" ng-src="{{vm.enemies[vm.questionIndex + vm.errorOffset].url}}" ng-on-load="vm.testOnLoad($event)" ng-on-error="vm.onError($event)" class="enemy-image" ng-style="vm.iconStyle">
+                        <img ng-show="!vm.showSkin" ng-src="https://stripedypaper.github.io/ak-guesser/loading.png" style="height: 100%">
                         <div class="hint" ng-if="vm.showHint && vm.questionIndex < vm.questions">{{vm.enemies[vm.questionIndex + vm.errorOffset].description}}</div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                             </div>
                             <div class="flexh">
                                 <div class="flex1"></div>
-                                <div class="skin-container-small">
+                                <div class="skin-container-small" ng-style="vm.smallImageContainerStyle">
                                     <img ng-src="{{vm.previousEnemy.url}}" class="skin-image-small">
                                 </div>
                             </div>
