--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -47,6 +47,7 @@
                         <option value="en_US">English</option>
                         <option value="ja_JP">日本語</option>
                         <option value="ko_KR">한국어</option>
+                        <option value="zh_CN">中文</option>
                     </select>
                 </div>
             </div>
@@ -156,7 +157,7 @@
                 <img src="https://stripedypaper.github.io/ak-guesser/image/sticker1.png" style="height:64px">
             </a>
             <a href="ak-guesser/skill" target="_self">
-                <img src="ak-guesser/image/sticker4.png" style="height:64px">
+                <img src="https://stripedypaper.github.io/ak-guesser/image/sticker4.png" style="height:64px">
             </a>
         </div>
     </div>
