--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -26,6 +26,7 @@
     <script src="jquery.min.js"></script>
     <script src="lodash.js"></script>
     <script src="main.js"></script>
+    <script src="strings.js"></script>
     <link href="styles.css" rel="stylesheet"></link>
     <base href="/ak-guesser">
     <meta name="description" content="Try guessing the Arknights operator & skin from a zoomed in image.">
@@ -147,7 +148,7 @@
         <canvas id="canvas2" width="32" height="32" style="width: 128px; height: 128px; border:1px solid; display:none"></canvas>
         <div class="flexh">
             <div class="flex1" style="margin-top:auto">
-                <div class="small">Thanks to Aceship and Kengxxiao for game resources</a></div>
+                <div class="small">Thanks to <a href="https://github.com/Kengxxiao/ArknightsGameData">ArknightsGameData</a> and <a href="https://github.com/ArknightsAssets/ArknightsAssets">ArknightsAssets</a> for game resources</a></div>
                 <div class="small">Created by <a target="blank" href="https://twitter.com/boardwalkhotel_">@boardwalkhotel_</a></div>
             </div>
             <!-- <a href="ak-guesser/" target="_self">
