--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -33,6 +33,7 @@
     <link href="styles.css" rel="stylesheet"></link>
     <base href="/ak-guesser">
     <meta name="description" content="Try guessing the Arknights operator & skin from a zoomed in image.">
+    <meta charset='UTF-8' />
     <link rel="shortcut icon" href="https://stripedypaper.github.io/ak-guesser/favicon.ico" />
 </head>
 <body ng-app="app" ng-controller="MyController as vm" id="" data-bs-theme="light">
