--- a/ak-guesser/index.html
+++ b/ak-guesser/index.html
@@ -27,10 +27,10 @@
     <script src="jquery.min.js"></script>
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/seedrandom/3.0.5/seedrandom.min.js"></script> -->
     <script src="lodash.js"></script>
-    <script src="main.js"></script>
-    <script src="strings.js"></script>
-    <script src="daily.js"></script>
-    <link href="styles.css" rel="stylesheet"></link>
+    <script src="main.js?v=1.1.25"></script>
+    <script src="strings.js?v=1.1.25"></script>
+    <script src="daily.js?v=1.1.25"></script>
+    <link href="styles.css?v=1.1.25" rel="stylesheet"></link>
     <base href="/ak-guesser">
     <meta name="description" content="Try guessing the Arknights operator & skin from a zoomed in image.">
     <meta charset='UTF-8' />
